y.output
State 27 conflicts: 1 shift/reduce
State 445 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | string
    4                   | '(' expression ')'
    5                   | generic_selection

    6 constant: I_CONSTANT
    7         | F_CONSTANT
    8         | ENUMERATION_CONSTANT

    9 enumeration_constant: IDENTIFIER

   10 string: STRING_LITERAL
   11       | FUNC_NAME

   12 generic_selection: GENERIC '(' assignment_expression ',' generic_assoc_list ')'

   13 generic_assoc_list: generic_association
   14                   | generic_assoc_list ',' generic_association

   15 generic_association: type_name ':' assignment_expression
   16                    | DEFAULT ':' assignment_expression

   17 postfix_expression: primary_expression
   18                   | postfix_expression '[' expression ']'
   19                   | postfix_expression '(' ')'
   20                   | postfix_expression '(' argument_expression_list ')'
   21                   | postfix_expression '.' IDENTIFIER
   22                   | postfix_expression PTR_OP IDENTIFIER
   23                   | postfix_expression INC_OP
   24                   | postfix_expression DEC_OP
   25                   | '(' type_name ')' left_brace initializer_list right_brace
   26                   | '(' type_name ')' left_brace initializer_list ',' right_brace

   27 argument_expression_list: assignment_expression
   28                         | argument_expression_list ',' assignment_expression

   29 unary_expression: postfix_expression
   30                 | INC_OP unary_expression
   31                 | DEC_OP unary_expression
   32                 | unary_operator cast_expression
   33                 | SIZEOF unary_expression
   34                 | SIZEOF '(' type_name ')'
   35                 | ALIGNOF '(' type_name ')'

   36 unary_operator: '&'
   37               | '*'
   38               | '+'
   39               | '-'
   40               | '~'
   41               | '!'

   42 cast_expression: unary_expression
   43                | '(' type_name ')' cast_expression

   44 multiplicative_expression: cast_expression
   45                          | multiplicative_expression '*' cast_expression
   46                          | multiplicative_expression '/' cast_expression
   47                          | multiplicative_expression '%' cast_expression

   48 additive_expression: multiplicative_expression
   49                    | additive_expression '+' multiplicative_expression
   50                    | additive_expression '-' multiplicative_expression

   51 shift_expression: additive_expression
   52                 | shift_expression LEFT_OP additive_expression
   53                 | shift_expression RIGHT_OP additive_expression

   54 relational_expression: shift_expression
   55                      | relational_expression '<' shift_expression
   56                      | relational_expression '>' shift_expression
   57                      | relational_expression LE_OP shift_expression
   58                      | relational_expression GE_OP shift_expression

   59 equality_expression: relational_expression
   60                    | equality_expression EQ_OP relational_expression
   61                    | equality_expression NE_OP relational_expression

   62 and_expression: equality_expression
   63               | and_expression '&' equality_expression

   64 exclusive_or_expression: and_expression
   65                        | exclusive_or_expression '^' and_expression

   66 inclusive_or_expression: exclusive_or_expression
   67                        | inclusive_or_expression '|' exclusive_or_expression

   68 logical_and_expression: inclusive_or_expression
   69                       | logical_and_expression AND_OP inclusive_or_expression

   70 logical_or_expression: logical_and_expression
   71                      | logical_or_expression OR_OP logical_and_expression

   72 conditional_expression: logical_or_expression
   73                       | logical_or_expression '?' expression ':' conditional_expression

   74 assignment_expression: conditional_expression
   75                      | unary_expression assignment_operator assignment_expression

   76 assignment_operator: '='
   77                    | MUL_ASSIGN
   78                    | DIV_ASSIGN
   79                    | MOD_ASSIGN
   80                    | ADD_ASSIGN
   81                    | SUB_ASSIGN
   82                    | LEFT_ASSIGN
   83                    | RIGHT_ASSIGN
   84                    | AND_ASSIGN
   85                    | XOR_ASSIGN
   86                    | OR_ASSIGN

   87 expression: assignment_expression
   88           | expression ',' assignment_expression

   89 constant_expression: conditional_expression

   90 declaration: declaration_specifiers ';'
   91            | declaration_specifiers init_declarator_list ';'
   92            | static_assert_declaration

   93 declaration_specifiers: storage_class_specifier declaration_specifiers
   94                       | storage_class_specifier
   95                       | type_specifier declaration_specifiers
   96                       | type_specifier
   97                       | type_qualifier declaration_specifiers
   98                       | type_qualifier
   99                       | function_specifier declaration_specifiers
  100                       | function_specifier
  101                       | alignment_specifier declaration_specifiers
  102                       | alignment_specifier

  103 init_declarator_list: init_declarator
  104                     | init_declarator_list ',' init_declarator

  105 init_declarator: declarator '=' initializer
  106                | declarator

  107 storage_class_specifier: TYPEDEF
  108                        | EXTERN
  109                        | STATIC
  110                        | THREAD_LOCAL
  111                        | AUTO
  112                        | REGISTER

  113 type_specifier: VOID
  114               | CHAR
  115               | SHORT
  116               | INT
  117               | LONG
  118               | FLOAT
  119               | DOUBLE
  120               | SIGNED
  121               | UNSIGNED
  122               | BOOL
  123               | COMPLEX
  124               | IMAGINARY
  125               | atomic_type_specifier
  126               | struct_or_union_specifier
  127               | enum_specifier
  128               | TYPEDEF_NAME

  129 struct_or_union_specifier: struct_or_union left_brace struct_declaration_list right_brace
  130                          | struct_or_union IDENTIFIER left_brace struct_declaration_list right_brace
  131                          | struct_or_union IDENTIFIER

  132 struct_or_union: STRUCT
  133                | UNION

  134 struct_declaration_list: struct_declaration
  135                        | struct_declaration_list struct_declaration

  136 struct_declaration: specifier_qualifier_list ';'
  137                   | specifier_qualifier_list struct_declarator_list ';'
  138                   | static_assert_declaration

  139 specifier_qualifier_list: type_specifier specifier_qualifier_list
  140                         | type_specifier
  141                         | type_qualifier specifier_qualifier_list
  142                         | type_qualifier

  143 struct_declarator_list: struct_declarator
  144                       | struct_declarator_list ',' struct_declarator

  145 struct_declarator: ':' constant_expression
  146                  | declarator ':' constant_expression
  147                  | declarator

  148 enum_specifier: ENUM left_brace enumerator_list right_brace
  149               | ENUM left_brace enumerator_list ',' right_brace
  150               | ENUM IDENTIFIER left_brace enumerator_list right_brace
  151               | ENUM IDENTIFIER left_brace enumerator_list ',' right_brace
  152               | ENUM IDENTIFIER

  153 enumerator_list: enumerator
  154                | enumerator_list ',' enumerator

  155 enumerator: enumeration_constant '=' constant_expression
  156           | enumeration_constant

  157 atomic_type_specifier: ATOMIC '(' type_name ')'

  158 type_qualifier: CONST
  159               | RESTRICT
  160               | VOLATILE
  161               | ATOMIC

  162 function_specifier: INLINE
  163                   | NORETURN

  164 alignment_specifier: ALIGNAS '(' type_name ')'
  165                    | ALIGNAS '(' constant_expression ')'

  166 declarator: pointer direct_declarator
  167           | direct_declarator

  168 direct_declarator: IDENTIFIER
  169                  | '(' declarator ')'
  170                  | direct_declarator '[' ']'
  171                  | direct_declarator '[' '*' ']'
  172                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  173                  | direct_declarator '[' STATIC assignment_expression ']'
  174                  | direct_declarator '[' type_qualifier_list '*' ']'
  175                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  176                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  177                  | direct_declarator '[' type_qualifier_list ']'
  178                  | direct_declarator '[' assignment_expression ']'
  179                  | direct_declarator '(' parameter_type_list ')'
  180                  | direct_declarator '(' ')'
  181                  | direct_declarator '(' identifier_list ')'

  182 pointer: '*' type_qualifier_list pointer
  183        | '*' type_qualifier_list
  184        | '*' pointer
  185        | '*'

  186 type_qualifier_list: type_qualifier
  187                    | type_qualifier_list type_qualifier

  188 parameter_type_list: parameter_list ',' ELLIPSIS
  189                    | parameter_list

  190 parameter_list: parameter_declaration
  191               | parameter_list ',' parameter_declaration

  192 parameter_declaration: declaration_specifiers declarator
  193                      | declaration_specifiers abstract_declarator
  194                      | declaration_specifiers

  195 identifier_list: IDENTIFIER
  196                | identifier_list ',' IDENTIFIER

  197 type_name: specifier_qualifier_list abstract_declarator
  198          | specifier_qualifier_list

  199 abstract_declarator: pointer direct_abstract_declarator
  200                    | pointer
  201                    | direct_abstract_declarator

  202 direct_abstract_declarator: '(' abstract_declarator ')'
  203                           | '[' ']'
  204                           | '[' '*' ']'
  205                           | '[' STATIC type_qualifier_list assignment_expression ']'
  206                           | '[' STATIC assignment_expression ']'
  207                           | '[' type_qualifier_list STATIC assignment_expression ']'
  208                           | '[' type_qualifier_list assignment_expression ']'
  209                           | '[' type_qualifier_list ']'
  210                           | '[' assignment_expression ']'
  211                           | direct_abstract_declarator '[' ']'
  212                           | direct_abstract_declarator '[' '*' ']'
  213                           | direct_abstract_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  214                           | direct_abstract_declarator '[' STATIC assignment_expression ']'
  215                           | direct_abstract_declarator '[' type_qualifier_list assignment_expression ']'
  216                           | direct_abstract_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  217                           | direct_abstract_declarator '[' type_qualifier_list ']'
  218                           | direct_abstract_declarator '[' assignment_expression ']'
  219                           | '(' ')'
  220                           | '(' parameter_type_list ')'
  221                           | direct_abstract_declarator '(' ')'
  222                           | direct_abstract_declarator '(' parameter_type_list ')'

  223 initializer: left_brace initializer_list right_brace
  224            | left_brace initializer_list ',' right_brace
  225            | assignment_expression

  226 initializer_list: designation initializer
  227                 | initializer
  228                 | initializer_list ',' designation initializer
  229                 | initializer_list ',' initializer

  230 designation: designator_list '='

  231 designator_list: designator
  232                | designator_list designator

  233 designator: '[' constant_expression ']'
  234           | '.' IDENTIFIER

  235 static_assert_declaration: STATIC_ASSERT '(' constant_expression ',' STRING_LITERAL ')' ';'

  236 statement: labeled_statement
  237          | compound_statement
  238          | expression_statement
  239          | selection_statement
  240          | iteration_statement
  241          | jump_statement

  242 labeled_statement: IDENTIFIER ':' statement
  243                  | CASE constant_expression ':' statement
  244                  | DEFAULT ':' statement

  245 compound_statement: left_brace right_brace
  246                   | left_brace block_item_list right_brace

  247 left_brace: LEFT_BRACE

  248 right_brace: RIGHT_BRACE

  249 block_item_list: block_item
  250                | block_item_list block_item

  251 block_item: declaration
  252           | statement

  253 expression_statement: ';'
  254                     | expression ';'

  255 selection_statement: IF '(' expression ')' statement ELSE statement
  256                    | IF '(' expression ')' statement
  257                    | SWITCH '(' expression ')' statement

  258 iteration_statement: WHILE '(' expression ')' statement
  259                    | DO statement WHILE '(' expression ')' ';'
  260                    | FOR '(' expression_statement expression_statement ')' statement
  261                    | FOR '(' expression_statement expression_statement expression ')' statement
  262                    | FOR '(' declaration expression_statement ')' statement
  263                    | FOR '(' declaration expression_statement expression ')' statement

  264 jump_statement: GOTO IDENTIFIER ';'
  265               | CONTINUE ';'
  266               | BREAK ';'
  267               | RETURN ';'
  268               | RETURN expression ';'

  269 translation_unit: external_declaration
  270                 | translation_unit external_declaration

  271 external_declaration: function_definition
  272                     | declaration

  273 function_definition: function_definition_header compound_statement

  274 function_definition_header: declaration_specifiers declarator declaration_list
  275                           | declaration_specifiers declarator

  276 declaration_list: declaration
  277                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 41
'%' (37) 47
'&' (38) 36 63
'(' (40) 4 12 19 20 25 26 34 35 43 157 164 165 169 179 180 181 202
    219 220 221 222 235 255 256 257 258 259 260 261 262 263
')' (41) 4 12 19 20 25 26 34 35 43 157 164 165 169 179 180 181 202
    219 220 221 222 235 255 256 257 258 259 260 261 262 263
'*' (42) 37 45 171 174 182 183 184 185 204 212
'+' (43) 38 49
',' (44) 12 14 26 28 88 104 144 149 151 154 188 191 196 224 228 229
    235
'-' (45) 39 50
'.' (46) 21 234
'/' (47) 46
':' (58) 15 16 73 145 146 242 243 244
';' (59) 90 91 136 137 235 253 254 259 264 265 266 267 268
'<' (60) 55
'=' (61) 76 105 155 230
'>' (62) 56
'?' (63) 73
'[' (91) 18 170 171 172 173 174 175 176 177 178 203 204 205 206 207
    208 209 210 211 212 213 214 215 216 217 218 233
']' (93) 18 170 171 172 173 174 175 176 177 178 203 204 205 206 207
    208 209 210 211 212 213 214 215 216 217 218 233
'^' (94) 65
'|' (124) 67
'~' (126) 40
error (256)
IDENTIFIER (258) 1 9 21 22 130 131 150 151 152 168 195 196 234 242
    264
I_CONSTANT (259) 6
F_CONSTANT (260) 7
STRING_LITERAL (261) 10 235
FUNC_NAME (262) 11
SIZEOF (263) 33 34
PTR_OP (264) 22
INC_OP (265) 23 30
DEC_OP (266) 24 31
LEFT_OP (267) 52
RIGHT_OP (268) 53
LE_OP (269) 57
GE_OP (270) 58
EQ_OP (271) 60
NE_OP (272) 61
AND_OP (273) 69
OR_OP (274) 71
MUL_ASSIGN (275) 77
DIV_ASSIGN (276) 78
MOD_ASSIGN (277) 79
ADD_ASSIGN (278) 80
SUB_ASSIGN (279) 81
LEFT_ASSIGN (280) 82
RIGHT_ASSIGN (281) 83
AND_ASSIGN (282) 84
XOR_ASSIGN (283) 85
OR_ASSIGN (284) 86
TYPEDEF_NAME (285) 128
ENUMERATION_CONSTANT (286) 8
LEFT_BRACE (287) 247
RIGHT_BRACE (288) 248
TYPEDEF (289) 107
EXTERN (290) 108
STATIC (291) 109 172 173 175 205 206 207 213 214 216
AUTO (292) 111
REGISTER (293) 112
INLINE (294) 162
CONST (295) 158
RESTRICT (296) 159
VOLATILE (297) 160
BOOL (298) 122
CHAR (299) 114
SHORT (300) 115
INT (301) 116
LONG (302) 117
SIGNED (303) 120
UNSIGNED (304) 121
FLOAT (305) 118
DOUBLE (306) 119
VOID (307) 113
COMPLEX (308) 123
IMAGINARY (309) 124
STRUCT (310) 132
UNION (311) 133
ENUM (312) 148 149 150 151 152
ELLIPSIS (313) 188
CASE (314) 243
DEFAULT (315) 16 244
IF (316) 255 256
ELSE (317) 255
SWITCH (318) 257
WHILE (319) 258 259
DO (320) 259
FOR (321) 260 261 262 263
GOTO (322) 264
CONTINUE (323) 265
BREAK (324) 266
RETURN (325) 267 268
ALIGNAS (326) 164 165
ALIGNOF (327) 35
ATOMIC (328) 157 161
GENERIC (329) 12
NORETURN (330) 163
STATIC_ASSERT (331) 235
THREAD_LOCAL (332) 110


Nonterminals, with rules where they appear

$accept (100)
    on left: 0
primary_expression (101)
    on left: 1 2 3 4 5, on right: 17
constant (102)
    on left: 6 7 8, on right: 2
enumeration_constant (103)
    on left: 9, on right: 155 156
string (104)
    on left: 10 11, on right: 3
generic_selection (105)
    on left: 12, on right: 5
generic_assoc_list (106)
    on left: 13 14, on right: 12 14
generic_association (107)
    on left: 15 16, on right: 13 14
postfix_expression (108)
    on left: 17 18 19 20 21 22 23 24 25 26, on right: 18 19 20 21 22
    23 24 29
argument_expression_list (109)
    on left: 27 28, on right: 20 28
unary_expression (110)
    on left: 29 30 31 32 33 34 35, on right: 30 31 33 42 75
unary_operator (111)
    on left: 36 37 38 39 40 41, on right: 32
cast_expression (112)
    on left: 42 43, on right: 32 43 44 45 46 47
multiplicative_expression (113)
    on left: 44 45 46 47, on right: 45 46 47 48 49 50
additive_expression (114)
    on left: 48 49 50, on right: 49 50 51 52 53
shift_expression (115)
    on left: 51 52 53, on right: 52 53 54 55 56 57 58
relational_expression (116)
    on left: 54 55 56 57 58, on right: 55 56 57 58 59 60 61
equality_expression (117)
    on left: 59 60 61, on right: 60 61 62 63
and_expression (118)
    on left: 62 63, on right: 63 64 65
exclusive_or_expression (119)
    on left: 64 65, on right: 65 66 67
inclusive_or_expression (120)
    on left: 66 67, on right: 67 68 69
logical_and_expression (121)
    on left: 68 69, on right: 69 70 71
logical_or_expression (122)
    on left: 70 71, on right: 71 72 73
conditional_expression (123)
    on left: 72 73, on right: 73 74 89
assignment_expression (124)
    on left: 74 75, on right: 12 15 16 27 28 75 87 88 172 173 175 176
    178 205 206 207 208 210 213 214 215 216 218 225
assignment_operator (125)
    on left: 76 77 78 79 80 81 82 83 84 85 86, on right: 75
expression (126)
    on left: 87 88, on right: 4 18 73 88 254 255 256 257 258 259 261
    263 268
constant_expression (127)
    on left: 89, on right: 145 146 155 165 233 235 243
declaration (128)
    on left: 90 91 92, on right: 251 262 263 272 276 277
declaration_specifiers (129)
    on left: 93 94 95 96 97 98 99 100 101 102, on right: 90 91 93 95
    97 99 101 192 193 194 274 275
init_declarator_list (130)
    on left: 103 104, on right: 91 104
init_declarator (131)
    on left: 105 106, on right: 103 104
storage_class_specifier (132)
    on left: 107 108 109 110 111 112, on right: 93 94
type_specifier (133)
    on left: 113 114 115 116 117 118 119 120 121 122 123 124 125 126
    127 128, on right: 95 96 139 140
struct_or_union_specifier (134)
    on left: 129 130 131, on right: 126
struct_or_union (135)
    on left: 132 133, on right: 129 130 131
struct_declaration_list (136)
    on left: 134 135, on right: 129 130 135
struct_declaration (137)
    on left: 136 137 138, on right: 134 135
specifier_qualifier_list (138)
    on left: 139 140 141 142, on right: 136 137 139 141 197 198
struct_declarator_list (139)
    on left: 143 144, on right: 137 144
struct_declarator (140)
    on left: 145 146 147, on right: 143 144
enum_specifier (141)
    on left: 148 149 150 151 152, on right: 127
enumerator_list (142)
    on left: 153 154, on right: 148 149 150 151 154
enumerator (143)
    on left: 155 156, on right: 153 154
atomic_type_specifier (144)
    on left: 157, on right: 125
type_qualifier (145)
    on left: 158 159 160 161, on right: 97 98 141 142 186 187
function_specifier (146)
    on left: 162 163, on right: 99 100
alignment_specifier (147)
    on left: 164 165, on right: 101 102
declarator (148)
    on left: 166 167, on right: 105 106 146 147 169 192 274 275
direct_declarator (149)
    on left: 168 169 170 171 172 173 174 175 176 177 178 179 180 181
   , on right: 166 167 170 171 172 173 174 175 176 177 178 179 180
    181
pointer (150)
    on left: 182 183 184 185, on right: 166 182 184 199 200
type_qualifier_list (151)
    on left: 186 187, on right: 172 174 175 176 177 182 183 187 205
    207 208 209 213 215 216 217
parameter_type_list (152)
    on left: 188 189, on right: 179 220 222
parameter_list (153)
    on left: 190 191, on right: 188 189 191
parameter_declaration (154)
    on left: 192 193 194, on right: 190 191
identifier_list (155)
    on left: 195 196, on right: 181 196
type_name (156)
    on left: 197 198, on right: 15 25 26 34 35 43 157 164
abstract_declarator (157)
    on left: 199 200 201, on right: 193 197 202
direct_abstract_declarator (158)
    on left: 202 203 204 205 206 207 208 209 210 211 212 213 214 215
    216 217 218 219 220 221 222, on right: 199 201 211 212 213 214
    215 216 217 218 221 222
initializer (159)
    on left: 223 224 225, on right: 105 226 227 228 229
initializer_list (160)
    on left: 226 227 228 229, on right: 25 26 223 224 228 229
designation (161)
    on left: 230, on right: 226 228
designator_list (162)
    on left: 231 232, on right: 230 232
designator (163)
    on left: 233 234, on right: 231 232
static_assert_declaration (164)
    on left: 235, on right: 92 138
statement (165)
    on left: 236 237 238 239 240 241, on right: 242 243 244 252 255
    256 257 258 259 260 261 262 263
labeled_statement (166)
    on left: 242 243 244, on right: 236
compound_statement (167)
    on left: 245 246, on right: 237 273
left_brace (168)
    on left: 247, on right: 25 26 129 130 148 149 150 151 223 224 245
    246
right_brace (169)
    on left: 248, on right: 25 26 129 130 148 149 150 151 223 224 245
    246
block_item_list (170)
    on left: 249 250, on right: 246 250
block_item (171)
    on left: 251 252, on right: 249 250
expression_statement (172)
    on left: 253 254, on right: 238 260 261 262 263
selection_statement (173)
    on left: 255 256 257, on right: 239
iteration_statement (174)
    on left: 258 259 260 261 262 263, on right: 240
jump_statement (175)
    on left: 264 265 266 267 268, on right: 241
translation_unit (176)
    on left: 269 270, on right: 0 270
external_declaration (177)
    on left: 271 272, on right: 269 270
function_definition (178)
    on left: 273, on right: 271
function_definition_header (179)
    on left: 274 275, on right: 273
declaration_list (180)
    on left: 276 277, on right: 274 277


state 0

    0 $accept: . translation_unit $end

    TYPEDEF_NAME   shift, and go to state 1
    TYPEDEF        shift, and go to state 2
    EXTERN         shift, and go to state 3
    STATIC         shift, and go to state 4
    AUTO           shift, and go to state 5
    REGISTER       shift, and go to state 6
    INLINE         shift, and go to state 7
    CONST          shift, and go to state 8
    RESTRICT       shift, and go to state 9
    VOLATILE       shift, and go to state 10
    BOOL           shift, and go to state 11
    CHAR           shift, and go to state 12
    SHORT          shift, and go to state 13
    INT            shift, and go to state 14
    LONG           shift, and go to state 15
    SIGNED         shift, and go to state 16
    UNSIGNED       shift, and go to state 17
    FLOAT          shift, and go to state 18
    DOUBLE         shift, and go to state 19
    VOID           shift, and go to state 20
    COMPLEX        shift, and go to state 21
    IMAGINARY      shift, and go to state 22
    STRUCT         shift, and go to state 23
    UNION          shift, and go to state 24
    ENUM           shift, and go to state 25
    ALIGNAS        shift, and go to state 26
    ATOMIC         shift, and go to state 27
    NORETURN       shift, and go to state 28
    STATIC_ASSERT  shift, and go to state 29
    THREAD_LOCAL   shift, and go to state 30

    declaration                 go to state 31
    declaration_specifiers      go to state 32
    storage_class_specifier     go to state 33
    type_specifier              go to state 34
    struct_or_union_specifier   go to state 35
    struct_or_union             go to state 36
    enum_specifier              go to state 37
    atomic_type_specifier       go to state 38
    type_qualifier              go to state 39
    function_specifier          go to state 40
    alignment_specifier         go to state 41
    static_assert_declaration   go to state 42
    translation_unit            go to state 43
    external_declaration        go to state 44
    function_definition         go to state 45
    function_definition_header  go to state 46


state 1

  128 type_specifier: TYPEDEF_NAME .

    $default  reduce using rule 128 (type_specifier)


state 2

  107 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 107 (storage_class_specifier)


state 3

  108 storage_class_specifier: EXTERN .

    $default  reduce using rule 108 (storage_class_specifier)


state 4

  109 storage_class_specifier: STATIC .

    $default  reduce using rule 109 (storage_class_specifier)


state 5

  111 storage_class_specifier: AUTO .

    $default  reduce using rule 111 (storage_class_specifier)


state 6

  112 storage_class_specifier: REGISTER .

    $default  reduce using rule 112 (storage_class_specifier)


state 7

  162 function_specifier: INLINE .

    $default  reduce using rule 162 (function_specifier)


state 8

  158 type_qualifier: CONST .

    $default  reduce using rule 158 (type_qualifier)


state 9

  159 type_qualifier: RESTRICT .

    $default  reduce using rule 159 (type_qualifier)


state 10

  160 type_qualifier: VOLATILE .

    $default  reduce using rule 160 (type_qualifier)


state 11

  122 type_specifier: BOOL .

    $default  reduce using rule 122 (type_specifier)


state 12

  114 type_specifier: CHAR .

    $default  reduce using rule 114 (type_specifier)


state 13

  115 type_specifier: SHORT .

    $default  reduce using rule 115 (type_specifier)


state 14

  116 type_specifier: INT .

    $default  reduce using rule 116 (type_specifier)


state 15

  117 type_specifier: LONG .

    $default  reduce using rule 117 (type_specifier)


state 16

  120 type_specifier: SIGNED .

    $default  reduce using rule 120 (type_specifier)


state 17

  121 type_specifier: UNSIGNED .

    $default  reduce using rule 121 (type_specifier)


state 18

  118 type_specifier: FLOAT .

    $default  reduce using rule 118 (type_specifier)


state 19

  119 type_specifier: DOUBLE .

    $default  reduce using rule 119 (type_specifier)


state 20

  113 type_specifier: VOID .

    $default  reduce using rule 113 (type_specifier)


state 21

  123 type_specifier: COMPLEX .

    $default  reduce using rule 123 (type_specifier)


state 22

  124 type_specifier: IMAGINARY .

    $default  reduce using rule 124 (type_specifier)


state 23

  132 struct_or_union: STRUCT .

    $default  reduce using rule 132 (struct_or_union)


state 24

  133 struct_or_union: UNION .

    $default  reduce using rule 133 (struct_or_union)


state 25

  148 enum_specifier: ENUM . left_brace enumerator_list right_brace
  149               | ENUM . left_brace enumerator_list ',' right_brace
  150               | ENUM . IDENTIFIER left_brace enumerator_list right_brace
  151               | ENUM . IDENTIFIER left_brace enumerator_list ',' right_brace
  152               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 47
    LEFT_BRACE  shift, and go to state 48

    left_brace  go to state 49


state 26

  164 alignment_specifier: ALIGNAS . '(' type_name ')'
  165                    | ALIGNAS . '(' constant_expression ')'

    '('  shift, and go to state 50


state 27

  157 atomic_type_specifier: ATOMIC . '(' type_name ')'
  161 type_qualifier: ATOMIC .

    '('  shift, and go to state 51

    '('       [reduce using rule 161 (type_qualifier)]
    $default  reduce using rule 161 (type_qualifier)


state 28

  163 function_specifier: NORETURN .

    $default  reduce using rule 163 (function_specifier)


state 29

  235 static_assert_declaration: STATIC_ASSERT . '(' constant_expression ',' STRING_LITERAL ')' ';'

    '('  shift, and go to state 52


state 30

  110 storage_class_specifier: THREAD_LOCAL .

    $default  reduce using rule 110 (storage_class_specifier)


state 31

  272 external_declaration: declaration .

    $default  reduce using rule 272 (external_declaration)


state 32

   90 declaration: declaration_specifiers . ';'
   91            | declaration_specifiers . init_declarator_list ';'
  274 function_definition_header: declaration_specifiers . declarator declaration_list
  275                           | declaration_specifiers . declarator

    IDENTIFIER  shift, and go to state 53
    '('         shift, and go to state 54
    '*'         shift, and go to state 55
    ';'         shift, and go to state 56

    init_declarator_list  go to state 57
    init_declarator       go to state 58
    declarator            go to state 59
    direct_declarator     go to state 60
    pointer               go to state 61


state 33

   93 declaration_specifiers: storage_class_specifier . declaration_specifiers
   94                       | storage_class_specifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 94 (declaration_specifiers)

    declaration_specifiers     go to state 62
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41


state 34

   95 declaration_specifiers: type_specifier . declaration_specifiers
   96                       | type_specifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 96 (declaration_specifiers)

    declaration_specifiers     go to state 63
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41


state 35

  126 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 126 (type_specifier)


state 36

  129 struct_or_union_specifier: struct_or_union . left_brace struct_declaration_list right_brace
  130                          | struct_or_union . IDENTIFIER left_brace struct_declaration_list right_brace
  131                          | struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 64
    LEFT_BRACE  shift, and go to state 48

    left_brace  go to state 65


state 37

  127 type_specifier: enum_specifier .

    $default  reduce using rule 127 (type_specifier)


state 38

  125 type_specifier: atomic_type_specifier .

    $default  reduce using rule 125 (type_specifier)


state 39

   97 declaration_specifiers: type_qualifier . declaration_specifiers
   98                       | type_qualifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 98 (declaration_specifiers)

    declaration_specifiers     go to state 66
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41


state 40

   99 declaration_specifiers: function_specifier . declaration_specifiers
  100                       | function_specifier .
